add stock logic and other staff

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,2 +1,4 @@
 spring.application.name=stockservice
-spring.cloud.config.uri=http://${HOST}:9000
+spring.cloud.config.uri=http://${CONFIG_CONNECTION}
+spring.cloud.config.fail-fast=true
+spring.cloud.config.retry.max-attempts=1
